--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  DOCKER_IMAGE: muralisocial123/aws-retail-app
+  DOCKER_IMAGE: kumanand/aws-retail-app
   DOCKER_TAG: v1.4.0
 
 jobs:
@@ -23,8 +23,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.kumanand }}
+          password: ${{ secrets.Kumark@890 }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
